[package]
name = "purely-functional-data-structure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
once_cell = "1.17.0"

[dev-dependencies]
criterion = { version = "0.3", feature = ["html-report"] }
rand = "0.8.5"

[[bench]]
name = "heap"
harness = false
